<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegisterActivity">


    <TextView
        android:id="@+id/emailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"

        android:text="@string/email"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput" />

    <TextView
        android:id="@+id/passPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/password"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/passInput"
        app:layout_constraintStart_toStartOf="@+id/passInput" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="283dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.324" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="284dp"
        android:layout_height="59dp"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="174dp"
        android:layout_height="82dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="88dp"
        android:onClick="LoginOrCreateAccount"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/passInput"
        app:layout_constraintTop_toBottomOf="@+id/passInput" />

    <Button
        android:id="@+id/newAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:onClick="ShowRegisterPage"
        android:text="@string/newAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>