<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.accountActivity.RegisterFragment">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="174dp"
        android:layout_height="82dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:alpha="1"
        android:background="@drawable/custom_button"
        android:clickable="false"
        android:text="@string/newAcc"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="283dp"
        android:layout_height="56dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/registerEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailInput" />

    <TextView
        android:id="@+id/registerPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/password"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/registerPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordInput" />

    <TextView
        android:id="@+id/registerUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/username"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/registerUsernameInput"
        app:layout_constraintStart_toStartOf="@+id/registerUsernameInput" />

    <EditText
        android:id="@+id/registerEmailInput"
        android:layout_width="284dp"
        android:layout_height="59dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/registerUsernameInput"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameInput" />

    <TextView
        android:id="@+id/registerEmailText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/email"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/registerEmailInput"
        app:layout_constraintStart_toStartOf="@+id/registerEmailInput" />

    <EditText
        android:id="@+id/registerUsernameInput"
        android:layout_width="285dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/passwordLengthError"
        android:textColor="#F10101"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

    <TextView
        android:id="@+id/emailErrorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/emailFormatError"
        android:textColor="#F10101"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/registerEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailInput" />

</androidx.constraintlayout.widget.ConstraintLayout>