<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="174dp"
        android:layout_height="82dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="64dp"
        android:onClick="RegisterAccount"
        android:text="@string/newAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passRegisterInput" />

    <EditText
        android:id="@+id/passRegisterInput"
        android:layout_width="283dp"
        android:layout_height="56dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/emailRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterInput" />

    <TextView
        android:id="@+id/passRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/password"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/passRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/passRegisterInput" />

    <TextView
        android:id="@+id/usernameRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/username"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/usernameRegisterInput" />

    <EditText
        android:id="@+id/emailRegisterInput"
        android:layout_width="284dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/usernameRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegisterInput" />

    <TextView
        android:id="@+id/emailRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:text="@string/email"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/emailRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/emailRegisterInput" />

    <EditText
        android:id="@+id/usernameRegisterInput"
        android:layout_width="285dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>